removed some bugs

--- a/templates/student/flames/flames_register.html
+++ b/templates/student/flames/flames_register.html
@@ -734,7 +734,7 @@ active
                         </div>
 
                         <div class="price-row price-total">
-                            <span>Total</span> required
+                            <span>Total</span>
                             <span id="total-price">₹{{ course.discount_price|floatformat:0 }}</span>
                         </div>
                     </div>
