updated course details page

--- a/templates/administration/flames/course_detail.html
+++ b/templates/administration/flames/course_detail.html
@@ -392,7 +392,7 @@
                     <div class="info-card">
                         <div class="info-card-header">Description</div>
                         <div class="info-card-body">
-                            <p>{{ course.description }}</p>
+                            <p>{{ course.description|linebreaks }}</p>
                         </div>
                     </div>
 
