--- a/templates/home/course_detail.html
+++ b/templates/home/course_detail.html
@@ -482,9 +482,9 @@
             <div class="col-lg-11 mx-auto">
                 <!-- Course Description -->
                 <div class="course-content" data-aos="fade-up">
-                    <div class="course-section">
+                    <div class="course-section text-white ">
                         <h2 class="course-section-title">About This Flame🔥</h2>
-                        <p style="color: #aaa; line-height: 1.8;">{{ course.description }}</p>
+                        <p style="line-height: 1.8;">{{ course.description|linebreaks }}</p>
                     </div>
 
                     <!-- Instructor Info -->
